--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
                 <section class="travel-search">
                     <form autocomplete="off" class="travel-search-form">
                         <p>Round Trip</p>
-                        <section>
+                        <section class="autocomplete">
                             <label>Pick-up City Name</label>
                             <input type="text" id="myInput" class="autocomplete">
                         </section>
-                        <section>
+                        <section class="autocomplete">
                             <label>Drop-off City Name</label>
                             <input type="text">
                         </section>
@@ -215,11 +215,11 @@
                 <section class="travel-search">
                     <form autocomplete="off" class="travel-search-form">
                         <p>Local</p>
-                        <section>
+                        <section class="autocomplete">
                             <label>Pick-up City Name</label>
                             <input type="text" id="myInput" class="autocomplete">
                         </section>
-                        <section>
+                        <section class="autocomplete">
                             <label>Drop-off City Name</label>
                             <input type="text">
                         </section>
@@ -237,10 +237,10 @@
                     <form autocomplete="off" class="travel-search-form">
                         <p>Transfer</p>
                         <section>
-                            <label>Pick-up City Name</label>
+                            <label class="autocomplete">Pick-up City Name</label>
                             <input type="text" id="myInput" class="autocomplete">
                         </section>
-                        <section>
+                        <section class="autocomplete">
                             <label>Drop-off City Name</label>
                             <input type="text">
                         </section>
