--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
                         <p>One Way Trip</p>
                         <section class="autocomplete">
                             <label>Pick-up City Name</label>
-                            <input type="text" id="myInput" class="autocomplete">
+                            <input type="text" id="myInput">
                         </section>
                         <section class="autocomplete">
                             <label>Drop-off City Name</label>
-                            <input type="text" id="myInput" class="autocomplete">
+                            <input type="text" id="myInput">
                         </section>
                         <section>
                             <label>Choose a date</label>
-                            <input type="date" class="datepicker">
+                            <input type="date">
                         </section>
                         <button class="submit-btn">Submit</button>
                     </form>
@@ -192,19 +192,19 @@
 
             <div class="col s12 trip-tabs-content" id="ROUNDTRIP">
                 <section class="travel-search">
-                    <form autocomplete="off" class="travel-search-form">
+                    <form autocomplete="off" action="#" class="travel-search-form">
                         <p>Round Trip</p>
                         <section class="autocomplete">
                             <label>Pick-up City Name</label>
-                            <input type="text" id="myInput" class="autocomplete">
+                            <input type="text" id="myInput">
                         </section>
                         <section class="autocomplete">
                             <label>Drop-off City Name</label>
-                            <input type="text">
+                            <input type="text" id="myInput">
                         </section>
                         <section>
                             <label>Choose a date</label>
-                            <input type="text" class="datepicker">
+                            <input type="date">
                         </section>
                         <button class="submit-btn">Submit</button>
                     </form>
@@ -213,19 +213,19 @@
 
             <div class="col s12 trip-tabs-content" id="LOCAL">
                 <section class="travel-search">
-                    <form autocomplete="off" class="travel-search-form">
+                    <form autocomplete="off" action="#" class="travel-search-form">
                         <p>Local</p>
                         <section class="autocomplete">
                             <label>Pick-up City Name</label>
-                            <input type="text" id="myInput" class="autocomplete">
+                            <input type="text" id="myInput">
                         </section>
                         <section class="autocomplete">
                             <label>Drop-off City Name</label>
-                            <input type="text">
+                            <input type="text" id="myInput">
                         </section>
                         <section>
                             <label>Choose a date</label>
-                            <input type="text" class="datepicker">
+                            <input type="date">
                         </section>
                         <button class="submit-btn">Submit</button>
                     </form>
@@ -234,19 +234,19 @@
 
             <div class="col s12 trip-tabs-content" id="TRANSFER">
                 <section class="travel-search">
-                    <form autocomplete="off" class="travel-search-form">
+                    <form autocomplete="off" action="#" class="travel-search-form">
                         <p>Transfer</p>
                         <section>
                             <label class="autocomplete">Pick-up City Name</label>
-                            <input type="text" id="myInput" class="autocomplete">
+                            <input type="text" id="myInput">
                         </section>
                         <section class="autocomplete">
                             <label>Drop-off City Name</label>
-                            <input type="text">
+                            <input type="text" id="myInput">
                         </section>
                         <section>
                             <label>Choose a date</label>
-                            <input type="text" class="datepicker">
+                            <input type="date">
                         </section>
                         <button class="submit-btn">Submit</button>
                     </form>
