--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         </a>
     </div>
     <script>
-            // autocomplete
+    // autocomplete
     function autocomplete(inp, arr) {
     /*the autocomplete function takes two arguments,
     the text field element and an array of possible autocompleted values:*/
@@ -555,7 +555,7 @@
     }
 
         /*An array containing all the city names in India:*/
-        var countries = [
+        var cities = [
             "Ahemdabad", 
             "Aurangabad", 
             "Bhuj", 
@@ -575,7 +575,7 @@
             "Vadodara"
         ];
         /*initiate the autocomplete function on the "myInput" element, and pass along the countries array as possible autocomplete values:*/
-        autocomplete(document.getElementById("myInput"), countries);
+        autocomplete(document.getElementById("myInput"), cities);
     </script>
     
     </body>
