--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
                             <label>Choose a date</label>
                             <input type="date">
                         </section>
-                        <button class="submit-btn">Submit</button>
+                        <section style="margin-top: 18px;">                        
+                            <a class="submit-btn" href="https://wa.me/+918980541812?text=I'm%20interested%20in%20Single%20Trip%20car%20booking">Submit</a>
+                        </section>
                     </form>
                 </section>
             </div>
@@ -212,7 +214,9 @@
                             <label>Choose a date</label>
                             <input type="date">
                         </section>
-                        <button class="submit-btn">Submit</button>
+                        <section style="margin-top: 18px;">                        
+                            <a class="submit-btn" href="https://wa.me/+918980541812?text=I'm%20interested%20in%20Round%20Trip%20car%20booking">Submit</a>
+                        </section>
                     </form>
                 </section>
             </div>
@@ -233,7 +237,9 @@
                             <label>Choose a date</label>
                             <input type="date">
                         </section>
-                        <button class="submit-btn">Submit</button>
+                        <section style="margin-top: 18px;">                        
+                            <a class="submit-btn" href="https://wa.me/+918980541812?text=I'm%20interested%20in%20Local%20Trip%20car%20booking">Submit</a>
+                        </section>
                     </form>
                 </section>
             </div>
@@ -254,7 +260,9 @@
                             <label>Choose a date</label>
                             <input type="date">
                         </section>
-                        <button class="submit-btn">Submit</button>
+                        <section style="margin-top: 18px;">                        
+                            <a class="submit-btn" href="https://wa.me/+918980541812?text=I'm%20interested%20in%20Transfer%20car%20booking">Submit</a>
+                        </section>
                     </form>
                 </section>
             </div>
