--- a/index.html
+++ b/index.html
@@ -181,15 +181,15 @@
                         <p>One Way Trip</p>
                         <section class="autocomplete">
                             <label>Pick-up City Name</label>
-                            <input type="text" id="SinglePickupCity">
+                            <input type="text" id="SinglePickupCity" required>
                         </section>
                         <section class="autocomplete">
                             <label>Drop-off City Name</label>
-                            <input type="text" id="SingleDropCity">
+                            <input type="text" id="SingleDropCity" required>
                         </section>
                         <section>
                             <label>Choose a date</label>
-                            <input type="date">
+                            <input type="date" required>
                         </section>
                         <section style="margin-top: 18px;">                        
                             <a class="submit-btn" href="https://wa.me/+918980541812?text=I'm%20interested%20in%20Single%20Trip%20car%20booking">Submit</a>
@@ -204,15 +204,15 @@
                         <p>Round Trip</p>
                         <section class="autocomplete">
                             <label>Pick-up City Name</label>
-                            <input type="text" id="RoundPickupCity">
+                            <input type="text" id="RoundPickupCity" required>
                         </section>
                         <section class="autocomplete">
                             <label>Drop-off City Name</label>
-                            <input type="text" id="RroundDropCity">
+                            <input type="text" id="RroundDropCity" required>
                         </section>
                         <section>
                             <label>Choose a date</label>
-                            <input type="date">
+                            <input type="date" required>
                         </section>
                         <section style="margin-top: 18px;">                        
                             <a class="submit-btn" href="https://wa.me/+918980541812?text=I'm%20interested%20in%20Round%20Trip%20car%20booking">Submit</a>
@@ -227,15 +227,15 @@
                         <p>Local</p>
                         <section class="autocomplete">
                             <label>Pick-up City Name</label>
-                            <input type="text" id="LocalPickupCity">
+                            <input type="text" id="LocalPickupCity" required>
                         </section>
                         <section class="autocomplete">
                             <label>Drop-off City Name</label>
-                            <input type="text" id="LocalDropCity">
+                            <input type="text" id="LocalDropCity" required>
                         </section>
                         <section>
                             <label>Choose a date</label>
-                            <input type="date">
+                            <input type="date" required>
                         </section>
                         <section style="margin-top: 18px;">                        
                             <a class="submit-btn" href="https://wa.me/+918980541812?text=I'm%20interested%20in%20Local%20Trip%20car%20booking">Submit</a>
@@ -250,15 +250,15 @@
                         <p>Transfer</p>
                         <section>
                             <label class="autocomplete">Pick-up City Name</label>
-                            <input type="text" id="TransferPickupCity">
+                            <input type="text" id="TransferPickupCity" required>
                         </section>
                         <section class="autocomplete">
                             <label>Drop-off City Name</label>
-                            <input type="text" id="TransferDropCity">
+                            <input type="text" id="TransferDropCity" required>
                         </section>
                         <section>
                             <label>Choose a date</label>
-                            <input type="date">
+                            <input type="date" required>
                         </section>
                         <section style="margin-top: 18px;">                        
                             <a class="submit-btn" href="https://wa.me/+918980541812?text=I'm%20interested%20in%20Transfer%20car%20booking">Submit</a>
