--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 
 <body>
     <h1>changes by midnyt</h1>
+    <span>some more changes</span>
     <!-- header -->
     <div class="navbar-fixed">
         <nav>
